# flutter_bullet

./: .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml  regen.sh
flutter_bullet_library/: .gitignore  CMakeLists.txt  flutter_bullet.cc  flutter_bullet.h
lib/: flutter_bullet.dart  physics3d.dart  rigid_body.dart  shapes.dart  transform.dart  world.dart
lib/src/: collidable.dart  flutter_bullet_bindings.dart  flutter_bullet_bindings_generated.dart  query.dart  rigid_body.dart  shapes.dart  transform.dart  world.dart
native/: CMakeLists.txt  dart_api_dl.c  flutter_bullet.cc  flutter_bullet.h
test/: world_test.dart
